# mime-xemmai

./: CMakeLists.txt  Makefile.am  configure.ac  mime-xemmai.vcxproj
mime/xemmai/: Makefile.am  base64.cc  mime.cc  mime.h  quoted_printable.cc
src/: CMakeLists.txt  Makefile.am  base64.cc  mime.cc  mime.h  quoted_printable.cc
test/: CMakeLists.txt  Makefile.am  base64_decode.xm  base64_encode.xm  decode.xm  encode.xm  quoted_printable_decode.xm  quoted_printable_encode.xm
